<resources>
    <string name="app_name">FitnessTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="motion_flow">Motion Flow</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome to Motion Flow!</string>
    <string name="change_theme_color">Change Theme Color</string>
    <string name="fitness_calendar">Fitness Calendar</string>
</resources>